# ocaml-getting-started-advent-of-code-23

./: .gitignore  README.md  aoc_ocaml.opam  dune-project  main.ml
lib/: day1.ml  example.ml
